tests/pass/GreaterOrEqual.java
package pass;

public class GreaterOrEqual {
  public boolean greaterorequal(int x, int y) {
      return x >= y;
  }
}
