tests/fail/RightBitShiftAssign.java
package fail;

import java.lang.System;

public class RightBitShiftAssign {

  public static void main(String[] args ) {
    int x = 4;
    x >>= "hello";
  }

}
